update swagger for promo code
